--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <canvas id="planetCanvas" width="1200" height="700"></canvas>
     <button id="pauseButton">暂停</button>
     <button id="playButton" style="display: none;">播放</button>
+    <div>循环次数: <span id="loopCount">0</span></div>
     <script>
         function resizeCanvas() {
             const canvas = document.getElementById('planetCanvas');
@@ -43,7 +44,7 @@
         const canvas = document.getElementById('planetCanvas');
         const ctx = canvas.getContext('2d');
 
-        fetch('o10')
+        fetch('x.txt')
             .then(response => response.text())
             .then(data => {
                 const lines = data.split('\n');
@@ -55,6 +56,7 @@
 
                 let intervalId;
                 let isPaused = false;
+                let loopCount = 0;
 
                 function draw() {
                     if (isPaused) return;
@@ -71,6 +73,8 @@
                     if (currentTime >= time) {
                         currentTime = 0;
                         lineIndex = 2;
+                        loopCount++;
+                        document.getElementById('loopCount').textContent = loopCount;
                     }
                 }
 
