--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         // -----------------------------------------------
         // JavaScript code to handle the planet simulation
         // -----------------------------------------------
-        const colors = ["red", "blue", "orange", "gold", "green", "grey", "purple", "pink", "cyan"];
+        const colors1 = ["red", "blue", "orange", "gold", "green", "grey", "purple", "pink", "cyan"];
+        const colors2 = ["red", "grey", "grey"];
+        const colors = colors2;
         const canvas = document.getElementById('planetCanvas');
         const ctx = canvas.getContext('2d');
 
