调整水分子初始化位置和缩放因子，新增3D模拟器页面

--- a/imol.html
+++ b/imol.html
@@ -44,8 +44,9 @@
                 const numObjects = parseInt(lines[0]);
 
                 let lineIndex = 3;
-                canvas.width = parseFloat(lines[1])*30;
-                canvas.height = parseFloat(lines[1])*30;
+                const scale = 30;
+                canvas.width = parseFloat(lines[1])*scale;
+                canvas.height = parseFloat(lines[1])*scale;
                 const time = parseInt(lines[2]);
                 let currentTime = 0;
 
@@ -57,12 +58,12 @@
                     if (isPaused) return;
                     ctx.clearRect(0, 0, canvas.width, canvas.height);
                     for (let t = 0; t < numObjects; t++) {
-                        const scale = 30.0;
                         const x = parseFloat(lines[lineIndex++])*scale;
                         const y = parseFloat(lines[lineIndex++])*scale;
                         lineIndex++;
                         ctx.beginPath();
                         ctx.arc(x + canvas.width / 2, y + canvas.height / 2, 5, 0, 2 * Math.PI);
+                        
                         ctx.fillStyle = colors[t % colors.length];
                         ctx.fill();
                     }
